# openai-ros-gazebo-workout

./: .gitignore
src/cartpole_description/: CMakeLists.txt  package.xml
src/cartpole_tests/: CMakeLists.txt  package.xml
src/cartpole_tests/config/: cartpole_mbalunovic_params.yaml  cartpole_n1try_params.yaml  cartpole_ruippeixotog_params.yaml
src/cartpole_tests/launch/: cartpole_mbalunovic_training.launch  cartpole_n1try_training.launch  cartpole_ruippeixotog_training.launch
src/cartpole_tests/scripts/: cartpole3D_mbalunovic.py  cartpole3D_n1try.py  cartpole3D_ruippeixotog.py  qlearning.py  reward_chart.py
src/drone_training/: CMakeLists.txt
src/drone_training/drone_training/: package.xml
src/drone_training/drone_training/checkpoints/: checkpoint  dqn-final-model.ckpt.data-00000-of-00001  dqn-final-model.ckpt.index
src/drone_training/drone_training/config/: dqn_params.yaml  qlearn_params.yaml
src/drone_training/drone_training/launch/: dqn_learning.launch  main.launch
src/drone_training/drone_training/logs/: events.out.tfevents.1558982661.tahsincan-Inspiron-7577
src/drone_training/drone_training/src/: DQN.py  discrete_quadcopter_env.py  live_reward_chart.py  myquadcopter_env.py  qlearn.py  quadcopter_env.py  start_training.py
src/drone_training/drone_training/training_results/: openaigym.episode_batch.0.11195.stats.json  openaigym.episode_batch.0.19025.stats.json  openaigym.manifest.0.19025.manifest.json  q_value8.npy
src/legged_robot_description/: CMakeLists.txt  package.xml
src/legged_robot_training/: CMakeLists.txt  package.xml
src/legged_robot_training/config/: qlearn_params.yaml
src/legged_robot_training/launch/: training.launch
src/legged_robot_training/scripts/: start_training.py
src/openai_ros/: env.py
(+37 files in other folders)
