<?xml version="1.0"?>
<package format="2">
  <name>cartpole_tests</name>
  <version>0.0.0</version>
  <description>The cartpole_tests package</description>

  <maintainer email="tahsincankose@gmail.com">Tahsincan Kose</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>

  <export>
  </export>
</package>
