<?xml version="1.0"?>
<package format="2">
  <name>legged_robot_training</name>
  <version>0.1.0</version>
  <description>The legged_robot_training package</description>

  <maintainer email="tahsincan@todo.todo">tahsincan</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>

  <export>

  </export>
</package>
