<?xml version="1.0"?>
<package>
  <name>drone_training</name>
  <version>0.0.1</version>
  <description>The drone_training package</description>

  <maintainer email="rtellez@theconstructsim.com">Ricardo Tellez</maintainer>


  <license>LGPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>openai_ros</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>openai_ros</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
